# EDGstar_Pathfinding

./: README.md
Experments/Experment_1/Evaluation_metrics/: Evaluation_metrics_1.txt  Evaluation_metrics_10.txt  Evaluation_metrics_11.txt  Evaluation_metrics_12.txt  Evaluation_metrics_13.txt  Evaluation_metrics_14.txt  Evaluation_metrics_15.txt  Evaluation_metrics_16.txt  Evaluation_metrics_17.txt  Evaluation_metrics_18.txt  Evaluation_metrics_19.txt  Evaluation_metrics_2.txt  Evaluation_metrics_20.txt  Evaluation_metrics_3.txt  Evaluation_metrics_4.txt  Evaluation_metrics_5.txt  Evaluation_metrics_6.txt  Evaluation_metrics_7.txt  Evaluation_metrics_8.txt  Evaluation_metrics_9.txt
Experments/Experment_1/Path_bold/: map_1024_Astar.tif  map_1024_Dijkstra.tif  map_1024_EDGstar.tif  map_1024_JPS.tif
Experments/Experment_2/Evaluation_metrics/: Evaluation_metrics_1.txt  Evaluation_metrics_10.txt  Evaluation_metrics_11.txt  Evaluation_metrics_12.txt  Evaluation_metrics_13.txt  Evaluation_metrics_14.txt  Evaluation_metrics_15.txt  Evaluation_metrics_16.txt  Evaluation_metrics_17.txt  Evaluation_metrics_18.txt  Evaluation_metrics_19.txt  Evaluation_metrics_2.txt  Evaluation_metrics_20.txt  Evaluation_metrics_3.txt  Evaluation_metrics_4.txt  Evaluation_metrics_5.txt  Evaluation_metrics_6.txt  Evaluation_metrics_7.txt  Evaluation_metrics_8.txt  (+1 more)
src_exp/: CMakeLists.txt  main.cpp
src_exp/include/: EDG_Star.h  ScenarioLoader.h  astar_search.h  coutpng.h  grid_map.h  jump_point_map.h  load_matrix.h  loadmap.h  resource.h  resource1.h
src_exp/src/: ScenarioLoader.cpp
(+212 files in other folders)
